# __Genbank_To_Biodataset

./: LICENSE  README.md  pyproject.toml  run.py
config/: config.yaml  example.yaml
src/genbank_to_biodataset/: __init__.py  cache.py  cli.py  consensus.py  exporter.py  featurizer.py  ncbi_client.py  pipeline.py  utils_seq.py
src/genbank_to_biodataset.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
